[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logtide-sdk"
version = "0.9.0"
description = "Official Python SDK for LogTide - Self-hosted log management with async client, logging integration, batching, retry, circuit breaker, and middleware"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Polliog", email = "giuseppe@solture.it" }]
requires-python = ">=3.10"
keywords = [
  "logtide",
  "logging",
  "logs",
  "log-management",
  "monitoring",
  "observability",
  "self-hosted",
  "tracing",
  "circuit-breaker",
  "asyncio",
  "flask",
  "django",
  "fastapi",
  "starlette",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: System :: Logging",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: AsyncIO",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = ["requests>=2.31.0"]

[project.urls]
Homepage = "https://github.com/logtide-dev/logtide-python"
Repository = "https://github.com/logtide-dev/logtide-python"
Documentation = "https://logtide.dev/docs"
Issues = "https://github.com/logtide-dev/logtide-python/issues"

[project.optional-dependencies]
async = ["aiohttp>=3.9.0"]
starlette = ["starlette>=0.27.0"]
flask = ["flask>=2.0.0"]
django = ["django>=3.2.0"]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]

[dependency-groups]
tests = [
  "aiohttp>=3.9.0",
  "starlette>=0.27.0",
  "flask>=2.0.0",
  "django>=3.2.0",
  "fastapi>=0.100.0",
  "starlette>=0.27.0",
  "build",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "freezegun>=1.5.5",
  "pytest-mock>=3.14.1",
]
all = [{ include-group = "tests" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["logtide_sdk*"]

[tool.setuptools.package-data]
logtide_sdk = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "I",
  "UP",
  "T20",
  "B039",
  "PT",
  "RUF022",
  "RUF023",
  "RUF10",  # RUF10x
  "RUF20",  # RUF200
]
ignore = ["F841"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
